# control_kit

./: Cargo.toml  README.md
bindings/: Cargo.toml  build.rs
src/: lib.rs  services.rs  synchronization.rs  utils.rs
src/inputs/: inputprocessmethod.rs  screencapture.rs  synchronization.rs  telemetry.rs
src/inputs/screencapture/: blitdc.rs  capture_errors.rs  d3d11device.rs  desktopduplication.rs
src/inputs/telemetry/: data_layout.rs  ets2_telemetry.rs  shared_memory.rs
tests/: emulation_start.rs  single_service_test.rs  start_and_stop_interrupt_service_test.rs  synchronization_service_test.rs
