[package]
name = "control"
version = "0.1.0"
authors = ["Brennnan <brennnanhfredericks@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bindings = {path="bindings"}

[target.'cfg(windows)'.dependencies]
winapi= {version="0.3.9", features = ["d3d11","dxgi1_2","d3dcommon","dxgiformat","winerror","winuser"]}
wio = "0.2.2"
